# computer-vision-programming

./: .gitignore
LandmarkDetection/avatar-facial-landmark-detection/: CMakeListst.txt  LICENSE  README.md
OpenCV/: CMakeLists.txt
OpenCV/src/: AffineTransformations.cpp  DisplayImage.cpp
python/: resize_2D.py  warpAffine.ipynb
